<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.silvano</groupId>
	<artifactId>springboot-junit-mockito</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>springboot-junit-mockito</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>13</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
				<exclusion>
				    <groupId>junit</groupId>
				    <artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
		  	<groupId>org.junit.jupiter</groupId>
		  	<artifactId>junit-jupiter-api</artifactId>
		  	<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-params</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		  	<groupId>org.junit.jupiter</groupId>
		  	<artifactId>junit-jupiter-engine</artifactId>
		  	<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
			  	<groupId>org.apache.maven.plugins</groupId>
          			<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.8.1</version>
			    <configuration>
				<release>13</release>
				<compilerArgs>--enable-preview</compilerArgs>
			    </configuration>
			</plugin>
			<!-- This is just to make sure the class is set as main class to execute from the jar-->
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-shade-plugin</artifactId>
			    <version>3.2.1</version>
			    <executions>
				<execution>
				    <phase>package</phase>
				    <goals>
					<goal>shade</goal>
				    </goals>
				    <configuration>
					<transformers>
					    <transformer
						    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
					    <transformer
						    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
						<mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>
					    </transformer>
					</transformers>
				    </configuration>
				</execution>
			    </executions>
			</plugin>
		</plugins>
	</build>

</project>
